# schroot

./: .cvsignore  .gitignore  AUTHORS  AUTHORS.md  CMakeLists.txt  ChangeLog  HACKING  HACKING.md  Makefile.am  NEWS  NEWS.md  README  README.md  THANKS  THANKS.md  TODO  TODO.md  bootstrap  config.h.cmake  configure.ac
csbuild/: Makefile.am  csbuild-main-base.cc  csbuild-main-base.h  csbuild-main.h  csbuild-options.cc  csbuild-options.h  csbuild-session-base.cc  csbuild.1.in  csbuild.cc
dchroot/: Makefile.am  dchroot-chroot-config.cc  dchroot-chroot-config.h  dchroot-main-base.cc  dchroot-main-base.h  dchroot-main.cc  dchroot-main.h  dchroot-options.cc  dchroot-options.h  dchroot-session-base.cc  dchroot-session-base.h  dchroot-session.cc  dchroot-session.h  dchroot.1.in  dchroot.cc
dchroot-dsa/: Makefile.am  dchroot-dsa-chroot-config.cc  dchroot-dsa-chroot-config.h  dchroot-dsa-main.cc  dchroot-dsa-main.h  dchroot-dsa-options.cc  dchroot-dsa-options.h  dchroot-dsa-session.cc  dchroot-dsa-session.h  dchroot-dsa.1.in  dchroot-dsa.cc
doc/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  sbuild.dox.cmake  sbuild.dox.in  schroot-bin.dox.cmake  schroot.dox  schroot.dox.cmake  schroot.dox.in
doc/historical/: Makefile.am  sbuild-chroot-helper.c
doc/schroot/: .cvsignore  Makefile.am  schroot-docs.sgml  schroot-sections.txt  schroot.types
etc/: CMakeLists.txt  Makefile.am  genprofile  mount-defaults  nssdatabases-defaults  schroot.conf  script-defaults
etc/bash_completion/: CMakeLists.txt  Makefile.am  schroot
etc/default/: Makefile.am
etc/exec/: 00check  Makefile.am
etc/pam/: CMakeLists.txt  Makefile.am  schroot
etc/setup/: 15killprocs  20copyfiles  Makefile.am
etc/setup.d/: 00check  05btrfs  05file  05fsunion  05lvm  05union  10mount  15binfmt  15killprocs  20copyfiles  20nssdatabases  50chrootname  60unshare  70services  CMakeLists.txt  Makefile.am  common-config  common-data  common-functions
lib/bin-common/: CMakeLists.txt  main.cc  main.h  option-action.cc  option-action.h  options.cc  options.h  run.h
lib/sbuild/: .gitignore  CMakeLists.txt  Makefile.am  auth-pam-conv-tty.cc  auth-pam-conv-tty.h  auth-pam-conv.cc  auth-pam-message.cc  auth-pam-message.h  auth.h  chroot-block-device-base.cc  chroot-block-device-base.h  chroot-block-device.cc  chroot-block-device.h  chroot-btrfs-snapshot.cc  chroot-btrfs-snapshot.h  chroot-config.cc  chroot-config.h  chroot-custom.cc  chroot-custom.h  chroot-directory-base.h  chroot-directory.cc  chroot-directory.h  chroot-facet-mountable.cc  chroot-facet-mountable.h  chroot-facet-personality.cc  chroot-facet-personality.h  chroot-facet-session-clonable.cc  chroot-facet-session-clonable.h  chroot-facet-session.cc  chroot-facet-session.h  chroot-facet-source-clonable.cc  chroot-facet-source-clonable.h  chroot-facet-source.cc  chroot-facet-source.h  chroot-facet-union.cc  chroot-facet-union.h  chroot-facet-unshare.cc  chroot-facet-unshare.h  chroot-facet-userdata.cc  chroot-facet-userdata.h  (+45 more)
man/: .gitignore  CMakeLists.txt  Makefile.am  config.man.cmake  copyright.man  csbuild.1.in  csbuild.1.man  dchroot-dsa.1.in  dchroot-dsa.1.man  dchroot.1.in  dchroot.1.man  po4a.cfg  schroot-faq.7.in  schroot-faq.7.man  schroot-script-config.5.in  schroot-script-config.5.man  schroot-setup.5.in  schroot-setup.5.man  schroot.1.in  schroot.1.man  schroot.conf.5.in  schroot.conf.5.man
po/: .cvsignore  .gitignore  CMakeLists.txt  LINGUAS  Makevars  POTFILES.in  cs.po  da.po  de.po  en.po  en_GB.po  eu.po  fr.po  it.po  pt.po  schroot.pot  sv.po  vi.po  zh_CN.po
sbuild/: CMakeLists.txt  Makefile.am  auth-null.cc  auth-null.h  auth-pam-conv.h  auth-pam.cc  auth-pam.h  auth.cc  chroot-block-device-base.h  chroot-btrfs-snapshot.cc  chroot-config.cc  chroot-custom.cc  chroot-directory-base.cc  chroot-facet-session-clonable.cc  chroot-facet-session.h  chroot-facet-source-clonable.cc  chroot-facet-union.cc  chroot-facet-union.h  chroot-facet-unshare.cc  chroot-facet-unshare.h  chroot-facet-userdata.cc  chroot-file.cc  chroot-file.h  chroot-loopback.h  chroot.cc  environment.h  format-detail.h  keyfile-writer.cc  keyfile.cc  parse-error.h  regex.h  sbuild-auth-conv-tty.cc  sbuild-auth-conv-tty.h  sbuild-auth-conv.cc  sbuild-auth-conv.h  sbuild-auth-message.cc  sbuild-auth-message.h  sbuild-auth-null.cc  sbuild-auth-null.h  sbuild-auth-pam-conv-tty.cc  (+123 more)
schroot/: .cvsignore  Makefile.am  dchroot-chroot-config.cc  dchroot-chroot-config.h  dchroot-dsa-chroot-config.cc  dchroot-dsa-chroot-config.h  dchroot-dsa-main.cc  dchroot-dsa-main.h  dchroot-dsa-options.cc  dchroot-dsa-options.h  dchroot-dsa-session.cc  dchroot-dsa-session.h  dchroot-dsa.1.in  dchroot-dsa.cc  dchroot-main.cc  dchroot-main.h  dchroot-options.cc  dchroot-options.h  dchroot-session-base.cc  dchroot-session-base.h  dchroot-session.cc  dchroot-session.h  dchroot.1.in  dchroot.cc  sbuild-auth-conv-tty.c  sbuild-auth-conv-tty.cc  sbuild-auth-conv-tty.h  sbuild-auth-conv.c  sbuild-auth-conv.cc  sbuild-auth-conv.h  sbuild-auth-error.cc  sbuild-auth-error.h  sbuild-auth-message.c  sbuild-auth-message.cc  sbuild-auth-message.h  sbuild-auth.c  sbuild-auth.cc  sbuild-auth.h  sbuild-chroot-block-device.c  sbuild-chroot-block-device.cc  (+87 more)
test/: .cvsignore  .gitignore  CMakeLists.txt  Makefile.am  cleanup-test-data  cleanup-test-data.cmake  config-directory-deprecated.ex  config-directory-fail.ex  config-directory-valid.ex  config.ex1  helpers.h  sbuild-chroot-block-device.cc  sbuild-chroot-btrfs-snapshot.cc  sbuild-chroot-config.cc  sbuild-chroot-custom.cc  sbuild-chroot-directory.cc  sbuild-chroot-facet-userdata.cc  sbuild-chroot-file.cc  sbuild-chroot-loopback.cc  sbuild-chroot-lvm-snapshot.cc  sbuild-chroot-plain.cc  sbuild-chroot.cc  sbuild-config.cc  sbuild-dirstream.cc  sbuild-environment.cc  sbuild-keyfile.cc  sbuild-lock.cc  sbuild-log.cc  sbuild-nostream.cc  sbuild-parse-value.cc  sbuild-personality.cc  sbuild-regex.cc  sbuild-run-parts.cc  sbuild-util.cc  schroot-base-option-action.cc  setup-test-data  setup-test-data.cmake  test-helpers.h  test-sbuild-chroot.h  testmain.cc
(+454 files in other folders)
